--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -97,6 +97,10 @@
     color: var(--white);
 }
 footer{
+    position: relative;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
     background-color:var(--red)
 }
  footer ul .list-group-item {
